@@ -159,10 +159,9 @@ namespace HauntedHouseSoftware.SecureNotePad.DomainObjects
         private byte[] EncryptData(byte[] salt)
         {
             var compressed = _compression.Compress(EncodedData);
-            var encrypted = _aes.Encrypt(compressed, Convert.ToBase64String(_password.BCryptPassword1), salt, 25000);
-            var encrypted2 = _aes.Encrypt(encrypted, Convert.ToBase64String(_password.BCryptPassword2), salt, 25000);            
-
-            return encrypted2;
+            var encrypted = _aes.Encrypt(compressed, Convert.ToBase64String(_password.CombinedPasswords), salt, 40000);
+            
+            return encrypted;
         }
 
         public static byte[] GenerateSalt(int length)
